--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,13 @@ body{
 .print-div {
     padding: 10px;
     border-bottom: 1px solid #afaeae;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.print-div__remove {
+    display: none;
 }
 
 
