--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body{
     cursor: pointer;
 }
 
-.print-texto-validado {
+.print-texto-erro {
     color: red;
     font-size: 10px;
     text-align: center;
