--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,10 @@ body{
 
 .conteudo{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 500px;
+    min-height: 100vh;
 }
 
 .conteudo__conteiner{
@@ -105,4 +106,73 @@ body{
     color: red;
     font-size: 15px;    
     text-align: center;
+}
+
+.botoes {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.btn-apaga-tudo {
+    font-size: 12px;
+}
+
+.btn-apaga-tudo::before{
+    cursor: pointer;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+    border: solid 1px #afaeae;
+    border-radius: 50%;
+    margin: -20px;
+    margin-top: 4px;
+    margin-left: -29px;
+}
+
+.btn-apaga-tudo-OK::before{
+    background-color: green;
+    cursor: pointer;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+    border: solid 1px #afaeae;
+    border-radius: 50%;
+    margin: -20px;
+    margin-top: 4px;
+    margin-left: -29px;
+}
+
+.btn-marca-tudo-como-feito{
+    font-size: 12px;
+}
+
+.btn-marca-tudo-como-feito::before{
+    cursor: pointer;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+    border: solid 1px #afaeae;
+    border-radius: 50%;
+    margin: -20px;
+    margin-top: 4px;
+    margin-left: -29px;   
+}
+
+
+.btn-marca-tudo-como-feito-OK::before{
+    background-color: #ff0000;
+    cursor: pointer;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+    border: solid 1px #afaeae;
+    border-radius: 50%;
+    margin: -20px;
+    margin-top: 4px;
+    margin-left: -29px;
 }
