--- a/css/style.css
+++ b/css/style.css
@@ -121,30 +121,16 @@ body{
 .btn-apaga-tudo::before{
     cursor: pointer;
     content: "";
-    display: block;
-    height: 20px;
-    width: 20px;
-    border: solid 1px #afaeae;
-    border-radius: 50%;
-    margin: -20px;
-    margin-top: 4px;
-    margin-left: -29px;
-    font-size: 12px;
-}
-
-.btn-apaga-tudo-OK::before{
     background-color: red;
-    cursor: pointer;
-    content: "";
     display: block;
     height: 20px;
     width: 20px;
-    border: solid 1px #afaeae;
+    border: solid 1px #afaeae00;
     border-radius: 50%;
     margin: -20px;
     margin-top: 4px;
-    font-size: 12px;
     margin-left: -29px;
+    font-size: 12px;
 }
 
 .btn-marca-tudo-como-feito{
@@ -154,29 +140,15 @@ body{
 
 .btn-marca-tudo-como-feito::before{
     cursor: pointer;
+    background-color: green;
     content: "";
     display: block;
     height: 20px;
     width: 20px;
-    border: solid 1px #afaeae;
+    border: solid 1px #afaeae00;
     border-radius: 50%;
     margin: -20px;
     margin-top: 4px;
     margin-left: -29px;
     font-size: 12px;   
-}
-
-.btn-marca-tudo-como-feito-OK::before{
-    background-color: green;
-    cursor: pointer;
-    content: "";
-    display: block;
-    height: 20px;
-    width: 20px;
-    border: solid 1px #afaeae;
-    border-radius: 50%;
-    margin: -20px;
-    margin-top: 4px;
-    margin-left: -29px;
-    font-size: 12px;
 }
